crates/tokmd-analysis-html/tests/snapshots/snapshots__empty_receipt_json.snap
---
source: crates/tokmd-analysis-html/tests/snapshots.rs
expression: json_section
---
{"files":[]}
