crates/tokmd-analysis-html/tests/snapshots/snapshots__empty_receipt_title.snap
---
source: crates/tokmd-analysis-html/tests/snapshots.rs
expression: title
---
<title>tokmd Analysis Report</title>
