crates/tokmd-analysis-html/tests/snapshots/snapshots__single_file_json_data.snap
---
source: crates/tokmd-analysis-html/tests/snapshots.rs
expression: pretty
---
{
  "files": [
    {
      "code": 250,
      "lang": "Rust",
      "lines": 325,
      "module": "src",
      "path": "src/main.rs",
      "tokens": 750
    }
  ]
}
